--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -416,17 +416,11 @@ gossip protocol, internet of things, sensor networks, virtual sensor networks, d
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
 \IEEEPARstart
-{A}{long} with the development of the internet technology, the price of the broadband connectivity becomes affordable. Devices are trending to be  smaller and more powerful. People start to explore a way to connect devices to the network for better control and monitor the status of them. Devices such as smartphone, smartwatch, and smart thermostats are able to connect to a network and these devices could communicate with each other. If these devices are connected to the Internet, we call it the \textit{Internet of Things}. There is no doubt that IoT is an innovative paradigm \cite{Atzori} because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
+{A}{long} with the development of the information technology, the price of the broadband connectivity becomes affordable. Devices are trending to be  smaller and more powerful. People start to explore ways to connect devices to the network for better control and monitor the status of them. Devices such as smartphone, smartwatch, and smart thermostats are able to connect to a network and these devices could communicate with each other. If these devices are connected to the Internet as well, we call them the \textit{Internet of Things}. There is no doubt that IoT is an innovative paradigm \cite{Atzori} because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
 
-Remote sensing is one of the possible services of IoT. Remote sensing allows us to get the data from the device through the network instead of physically read the data. Remote sensing involves the search and selection of IoT devices to form a virtual sensor network. Subsequently, the selected devices estimate the wanted property collaboratively and report the result to the remote cloud agent. IoT assigns a unique MAC address to physical object which do not have an identification, so people could track the specific object’s status and control it remotely. The advantage of remote control is that it requires less manpower needed to monitor and manage the object. And it could further increase devices usage rate.
+Remote sensing is one of the possible services of IoT. Remote sensing allows users to get the data from the device through the network instead of physically read the data. Remote sensing involves the search and selection of IoT devices to form a virtual sensor network. Subsequently, the selected devices estimate the wanted property collaboratively and report the result to the remote cloud agent. IoT assigns a unique MAC address to physical object which do not have an identification, so people could track the specific object’s status and control it remotely. The advantage of remote control is that it requires less manpower needed to monitor and manage the object. And it could further increase devices usage rate.
 
-However, the main challenge here is that IoT devices are often resource limited meaning they have limited bandwidth and power, and restricted by their mobility. Due to the characteristics of IoT devices, topology of physical network formed from IoT is dynamic. The distributed network protocol which virtualizing the physical network has to deal with this dynamic nature of IoT networks.
-
-% OUTDATED
-%Therefore, it is important to evaluate the distributed network protocol's performance under various power models and different MAC protocols in ns-3.
-
-% REPLACED BY
-Those dynamic networks require a robust way to spread information across the whole network while minimizing the burden placed on the network. An efficient protocol is the gossip protocol \cite{gossip}, which spreads information similar to how an infection spreads in a population.
+However, the main challenge here is that IoT devices are often resource limited meaning they have limited bandwidth and power, and restricted by their mobility. Due to the characteristics of IoT devices, topology of physical network formed from IoT is dynamic. The distributed network protocol which virtualizing the physical network has to deal with this dynamic nature of IoT networks.Those dynamic networks require a robust way to spread information across the whole network while minimizing the burden placed on the network. An efficient protocol is the gossip protocol \cite{gossip}, which spreads information similar to how an infection spreads in a population.
 
 % You must have at least 2 lines in the paragraph with the drop letter
 % (should never be an issue)
@@ -540,7 +534,7 @@ Those dynamic networks require a robust way to spread information across the who
 %Our project goal is to evaluate the performance of a virtual network protocol consisting of IoT devices in ns-3. The major step here is that we will first simulate a wired mesh network with a given topology file. Then we will replace the wired Ethernet mesh network with wireless mesh network. Based on the new wireless mesh network, we will plug in models representing IoT device’s characters and implementing protocol to evaluate its performance.
 
 %REPLACED BY:
-The goal of our project is to add the gossip protocol to the simulation tool, ns3 and construct the customize packet to evaluate the performance of the gossip protocol in a mesh network of peer-to-peer connected IoT devices in the network simulator ns-3. There are \textcolor{red}{\textbf{three?}} essential aspects to evaluate the performance measurements.
+The goal of our project is to develop the gossip protocol to the simulation tool, ns3 and construct the customize packet to evaluate the performance of the gossip protocol in a mesh network of peer-to-peer connected IoT devices in the network simulator ns-3. There are \textcolor{red}{\textbf{three?}} essential aspects to evaluate the performance measurements.
 \begin{itemize}
  \item \textcolor{red}{ Average number of messages sent per node}
  \item Maximum amount of hops needed to spread the message
