--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -769,10 +769,12 @@ Lastly, figure~\ref{fig:maxtime} illustrates the time needed to spread the messa
  \centering
 % \includegraphics[width=2.5in]{figs/density}
  \caption{The density of the nodes for each batch of topology files.}
- \label{fig:maxtime}
+ \label{fig:density}
 \end{figure}
 
-\textcolor{red}{Maybe write about further work... What can be improved or looked onto...}
+We assume that the reason behing the results being not a function of the number of the nodes but rather seem more or less constant, is due to the increasing edge density with higher numbers of nodes. As seen in fig.~\ref{fig:density}, the number of edges is strictly linear depending only on the number of nodes in the topology. We also consider this as the reason we could not verify the logarithmic complexity suggested by \cite{gossip}.
+
+Section~\ref{sec:further} proposes further work which can be done to gain a more thorough evaluation.
 
 \section{Conclusion}
 We have introduced the topics of Internet of things and sensor networks. The opportunities resulting by virtualization of those sensor networks have been elaborated. A distributed algorithm to spread data across a mesh-network has been implemented. We proposed several performance measures to evaluate this algorithm.
@@ -781,13 +783,14 @@ Our results show the number of messages a node expects to send is not a function
 
 Unfortunately, we could not verify that the time complexity of the algorithm is $O(\log n)$ as outlined in \cite{gossip}. Possible causes to consider are discussed in the next section.
 
-\section{Further work}
+\section{Further work}\label{sec:further}
 In further work, various alterations to the gossip protocol can be covered and examined. For example, a node can improve routing (or decrease the number of hops) by notifying neighbors if there exists a shorter route to the owner of a message. To accomplish this, they need to keep track of the number of hops and then compare if the owner of a received message is one of their immediate neighbors. In case this is true and they will notify the source of the message, that the \textit{true} (or ideal) number of hops would be 1.
 
-Another option for further work, would be to change the parameters to create the topology file. Right now, it seems 
+Another option for further work, would be to change the parameters to create the topology file. As demonstrated in fig.~\ref{fig:density}, the number of edges per node is not a constant. We believe that making this value constant, will yield different results which possibly verify the logarithmic complexity suggested by \cite{gossip}.
 
+And lastly, the effect of reducing the solicit interval should be investigated. Clearly, having a faster rate to request new data will add an overhead to the network. Further work may determine an appropriate interval for the solicit interval.
 
-Due to time limitations we could not address the huge spectrum of possible analysis. Further work is needed to examine the effects when the wired links between nodes are replaced by wireless ones. Power limitations and mobility of the nodes should be included in such a scenario. Thus, the list of neighbors for each node changes over time and a topology file is not needed anymore. In the wireless case, Wi-Fi Direct can be used to connect devices with each other.
+Due to time limitations we could not address the huge spectrum of possible analysis. Further work is needed to examine the effects when the wired peer-to-peer links between nodes are replaced by wireless ones. Power limitations and mobility of the nodes should be included in such a scenario. Thus, the list of neighbors for each node changes over time and a topology file is not needed anymore. In the wireless case, Wi-Fi Direct can be used to connect devices with each other.
 
 % Maybe the hop-update extension?
 % #links vs #nodes...
